# crobots

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  configure.ac  crobots.6  play.sh
.github/workflows/: build.yml
debian/: .gitignore  changelog  control  copyright  crobots-doc.doc-base.doc  crobots-doc.docs  crobots.docs  crobots.examples  crobots.install  crobots.manpages  rules
debian/source/: lintian-overrides
doc/: Makefile.am  manual.html  manual.txt
examples/: Makefile.am  jedi12.r  ksnipper.r
legacy/: README.txt
src/: .gitignore  Makefile  Makefile.am  compiler.c  compiler.h  cpu.c  cpu.h  crobots.h  display.c  display.h  grammar.y  lexer.l  lexicon.l  library.c  library.h  main.c  motion.c  motion.h  screen.c  screen.h
